--- a/index.html
+++ b/index.html
@@ -104,14 +104,14 @@
 		</div>
 	  </section>
 	  <section>
-		<div id="tabs2" class="brows-win">
+		<div class="brows-win">
 		  <ul class="brows-navul">
-		    <li class="brows-nav-tab-1 active"><a href="#tabs-01">Internet Explorer</a></li>
-		    <li class="brows-nav-tab-2"><a href="#tabs-02">Firefox</a></li>
-		    <li class="brows-nav-tab-3"><a href="#tabs-3">Chrome</a></li>
-		    <li class="brows-nav-tab-4"><a href="#tabs-4">Safari</a></li>
+		    <li class="brows-nav-tab-1 active"><a href="#">Internet Explorer</a></li>
+		    <li class="brows-nav-tab-2"><a href="#">Firefox</a></li>
+		    <li class="brows-nav-tab-3"><a href="#">Chrome</a></li>
+		    <li class="brows-nav-tab-4"><a href="#">Safari</a></li>
 		  </ul>
-		  <div id="tabs-01" class="brows-down">
+		  <div class="brows-down">
 			<ol>
 	          <li>In your browser's menu bar, click on "Tools."</li>
 	          <li>Click "Internet Options..."</li>
